Make issue subject bigger on small screens

--- a/assets/stylesheets/redproject.css
+++ b/assets/stylesheets/redproject.css
@@ -1370,7 +1370,7 @@ top: 0.5em;
 		 text-overflow: ellipsis;
 		 white-space: nowrap;
 	 }
-	.issue-subject { font-size: 1.25em; }
+	.issue-subject { font-size: 1.35em; }
     .wrapper .last-talk {
         -webkit-flex: 1 0 100%;
         flex: 1 0 100%;
